doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\lib\bluejcore.jar;D:\lib\junit-4.11.jar;D:\lib\hamcrest-core-1.3.jar;D:\lib\lang-stride.jar;D:\lib\javafx\lib\javafx.base.jar;D:\lib\javafx\lib\javafx.controls.jar;D:\lib\javafx\lib\javafx.fxml.jar;D:\lib\javafx\lib\javafx.graphics.jar;D:\lib\javafx\lib\javafx.media.jar;D:\lib\javafx\lib\javafx.properties.jar;D:\lib\javafx\lib\javafx.swing.jar;D:\lib\javafx\lib\javafx.web.jar;C:\Users\Lenovo\Sahil
-d
C:\Users\Lenovo\Sahil\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Lenovo\Sahil\cq.java
<---- end of javadoc command ---->
Loading source file C:\Users\Lenovo\Sahil\cq.java...
Constructing Javadoc information...
C:\Users\Lenovo\Sahil\cq.java:1: error: cannot inherit from final Day
public class cq extends Day
                        ^
1 error
